# raysid-client

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
cli/: __init__.py  commands.py  main.py
raysid/: __init__.py  audio.py  background.py  calibration.py  client.py  device_settings.py  export.py  handlers.py  logging_config.py  models.py  nuclides.py  protocol.py  tui.py
