[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "raysid-client"
version = "1.0.0"
description = "Python BLE client for RaySID radiation detector"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "bleak>=0.20.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
audio = [
    "numpy>=1.20.0",
    "sounddevice>=0.4.0",
]
tui = [
    "textual>=0.50.0",
]
all = [
    "numpy>=1.20.0",
    "sounddevice>=0.4.0",
    "textual>=0.50.0",
]

[project.scripts]
raysid = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["raysid*", "cli*"]

